fixed root access in index.html

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       </div>
     </div>
     
-    <script src="/script.js" defer></script>
-    <script src="/edge-impulse-config.js" defer></script>
-    <script src="/data-collection.js" defer></script>
+    <script src="./script.js" defer></script>
+    <script src="./edge-impulse-config.js" defer></script>
+    <script src="./data-collection.js" defer></script>
   </body>
 </html>
