--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Data Collection Interface for Gesture Training</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="container">
@@ -90,8 +90,8 @@
       </div>
     </div>
     
-    <script src="./script.js" defer></script>
-    <script src="./edge-impulse-config.js" defer></script>
-    <script src="./data-collection.js" defer></script>
+    <script src="/script.js" defer></script>
+    <script src="/edge-impulse-config.js" defer></script>
+    <script src="/data-collection.js" defer></script>
   </body>
 </html>
